--- a/tlaplus-examples/specs/DieHard.cfg
+++ b/tlaplus-examples/specs/DieHard.cfg
@@ -14,4 +14,4 @@ NEXT Next
 \* INVARIANT
 \* Uncomment the previous line and add invariant names
 
-\* INVARIANT TypeOK
+INVARIANT TypeOK BigNotFour
