--- a/tlaplus-examples/specs/SeqSpec.cfg
+++ b/tlaplus-examples/specs/SeqSpec.cfg
@@ -5,20 +5,11 @@
 CONSTANTS
     greeting = "Hello"
 
-\* What should be those?
-\* INIT 
-\* NEXT 
+INIT Init
+NEXT Next
 
 \* PROPERTY
 \* Uncomment the previous line and add property names
 
-\* INVARIANT 
-\* What should be the invariants here?
-
-CONSTANTS 
-RM = {"r1", "r2", "r3"}
-
-SPECIFICATION TCSpec
-CHECK_DEADLOCK FALSE
-
-INVARIANT TCConsistent \* TCCommitted
+\* INVARIANT
+\* Uncomment the previous line and add invariant names
